fixed community in header, was not centered before

--- a/app/assets/stylesheets/application/header.css.sass
+++ b/app/assets/stylesheets/application/header.css.sass
@@ -10,9 +10,9 @@ $white: #FFFFFF
   .wrap
     width: 90%
 
-@media only screen and (min-width: 320px) and (max-width: 650px)
+@media only screen and (min-width: 0px) and (max-width: 650px)
   body
-    min-width: 320px
+    min-width: 0px
   #site-header
     display: none
   #mobile-header
@@ -51,7 +51,7 @@ $white: #FFFFFF
           color: $white
           position: relative
           background-color: lighten($red, 4%)
-          padding: 1em
+          padding: 1em 0
           text-align: center
           font-weight: bold
           &:active
@@ -59,6 +59,8 @@ $white: #FFFFFF
           span
             font-family: fontello
             font-size: 2em
+          p
+            margin: 0
 
 #site-header
   height: 48px
